--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -64,7 +64,8 @@ grails:
         defaultScope: singleton
     converters:
         encoding: UTF-8
-
+    cors:
+        enabled: true
 ---
 hibernate:
     cache:
