--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ apply plugin:"org.grails.plugins.views-json"
 repositories {
     mavenLocal()
     maven { url "https://repo.grails.org/grails/core" }
+    maven { url "https://jitpack.io" }
 }
 
 dependencies {
@@ -62,6 +63,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+
+    compile "com.github.ipfs:java-ipfs-api:v1.2.1"
+    compile "com.github.multiformats:java-multihash:v1.2.1"
+    compile "com.github.multiformats:java-multiaddr:v1.3.1"
+    compile "com.github.multiformats:java-multibase:v1.0.1"
+    implementation 'com.github.ipld:java-cid:v1.1.1'
 }
 
 bootRun {
